added Android build and test support